# tokenmaxxing-monitor

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md
bridge/: package-lock.json  package.json  qwen-code-export-2026-06-17T05-53-04-255Z.html
bridge/.qwen/skills/auto-skill-nimble-stale-connection/: SKILL.md
bridge/src/: index.js  lib.js
bridge/test/: lib.test.js
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/ble_app/: CMakeLists.txt  ble_app.c  ble_app.h
firmware/components/net_app/: CMakeLists.txt  ntp.c  ntp.h  wifi_app.c  wifi_app.h
firmware/components/port_bsp/: CMakeLists.txt
firmware/components/sensor/: CMakeLists.txt  battery.c  battery.h  battery_log.c  battery_log.h  shtc3.c  shtc3.h
firmware/components/ui_app/: CMakeLists.txt  font_amt14.c  font_bal28.c  font_zh18.c  icons.c  icons.h  ui_app.cpp  ui_app.h
firmware/components/usage_client/: CMakeLists.txt  usage_client.c  usage_client.h
firmware/components/user_app/: CMakeLists.txt  user_app.cpp  user_app.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp  secrets.h.example
menubar/: QwenBridgeBar.swift  build.sh
menubar/QwenBridgeBar.app/Contents/: Info.plist
menubar/QwenBridgeBar.app/Contents/MacOS/: QwenBridgeBar
menubar/QwenBridgeBar.app/Contents/Resources/Bridge/: index.js
menubar/QwenBridgeBar.app/Contents/_CodeSignature/: CodeResources
tools/: decode_batlog.py
tools/lvgl_preview/: CMakeLists.txt  esp_timer.h  lv_conf.h  render.sh  render_ui.cpp
